# yasplitt

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  file.c  main.c  utils.c
src/include/: file.h  utils.h
